syntax = "proto3";
package comdex.locker.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package            = "github.com/comdex-official/comdex/x/locker/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;
//locker_id will be the key which will be derived from the LockerLookUpTable
message Locker {
  string locker_id = 1 [
      (gogoproto.moretags) = "yaml:\"locker_id\""
  ];
  string depositor = 2 [
      (gogoproto.moretags) = "yaml:\"depositor\""
  ];
  // string deposited_amount = 3 [
  //   (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
  //   (gogoproto.moretags)   = "yaml:\"deposited_amount\"",
  //   (gogoproto.nullable)   = false
  // ]; 

  string returns_accumulated = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"returns_accumulated\"",
    (gogoproto.nullable)   = false
  ];
  string net_balance = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"net_balance\"",
    (gogoproto.nullable)   = false
  ];
  google.protobuf.Timestamp created_at = 5 [
      (gogoproto.nullable) = false,
      (gogoproto.stdtime) = true,
      (gogoproto.moretags)   = "yaml:\"created_at\""
  ];

  uint64 asset_deposit_id =6[
      (gogoproto.moretags)   = "yaml:\"asset_deposit_id\""
  ];
  bool is_locked = 7 [
    (gogoproto.moretags)   = "yaml:\"is_locked\""
  ]; 
  uint64 app_mapping_id =8[
    (gogoproto.moretags)   = "yaml:\"app_mapping_id\""
];
}

//Key is user address
message UserLockerAssetMapping {
  string owner = 1 [
      (gogoproto.moretags) = "yaml:\"owner\""
  ];
  repeated LockerToAppMapping  locker_app_mapping = 2 [
  (gogoproto.moretags) = "yaml:\"locker_app_mapping\""
  ];
}

//This is used inside the UserLockerAssetMapping
message LockerToAppMapping {
 uint64 app_mapping_id = 1;

 repeated AssetToLockerMapping user_asset_locker= 2[
  (gogoproto.moretags) = "yaml:\"user_asset_locker\""];
}

//This is used inside LockerToAppMapping
message AssetToLockerMapping{
  uint64 asset_id = 1;
  string locker_id =2 [
    (gogoproto.moretags) = "yaml:\"locker_id\""];
  }

//Key is app_mapping_id
message LockerLookupTable {
  uint64 app_mapping_id = 1[    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  repeated TokenToLockerMapping lockers = 2 [
      (gogoproto.moretags) = "yaml:\"user_vault_ids\""
  ];
  uint64 counter = 3;
}
message TokenToLockerMapping {
 uint64 asset_id = 1;

 repeated string locker_ids =2 [
 (gogoproto.moretags) = "yaml:\"addresses\""
  ];
  string deposited_amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"deposited_amount\"",
    (gogoproto.nullable)   = false
  ]; 
}

//Key is app_mapping_id
message LockerProductAssetMapping {
  uint64 app_mapping_id = 1 [
      (gogoproto.moretags) = "yaml:\"owner\""
  ];
  
  repeated uint64 asset_ids  = 2 [
      (gogoproto.moretags) = "yaml:\"asset_ids\""
  ];
}
// message LockerStatistics {
  
//   map<string, uint64> locked_assets = 2 [
//     (gogoproto.moretags) = "yaml:\"locked_assets\""
//   ];
// }